--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,23 @@
 services:
   front: 
+    image: yassinsiouda/sdxl-stream-frontend
     build: 
-      image: yassinsiouda/sdxl-stream-frontend
       context: frontend
       target: dev
     env_file:
       - .env
     ports:
       - "5173:5173"
-    volumes:
-      - ./frontend/src/:/app/src/
+    #volumes:
+    #  - ./frontend/src/:/app/src/
   back:
-    
+    image: yassinsiouda/sdxl-stream-backend
     build: 
-      image: yassinsiouda/sdxl-stream-backend
       context: backend
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend/:/app/
-      - ./backend/cache/:/app/cache/
+    #volumes:
+      #- ./backend/:/app/
+      #- ./backend/cache/:/app/cache/
     # enable gpu support
     runtime: nvidia
